---
source: crates/biome_cli/tests/snap_test.rs
expression: content
snapshot_kind: text
---
## `package.json`

```json
{ "name": "foo", "dependencies": { "foo": "latest" } }
```

# Termination Message

```block
format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
package.json format ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Formatter would have printed the following content:
  
    1   │ - {·"name":·"foo",·"dependencies":·{·"foo":·"latest"·}·}
      1 │ + {
      2 │ + → "name":·"foo",
      3 │ + → "dependencies":·{
      4 │ + → → "foo":·"latest"
      5 │ + → }
      6 │ + }
      7 │ + 
  

```

```block
Checked 1 file in <TIME>. No fixes applied.
Found 1 error.
```
